--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
     {% if page.bot %}
       
-      <script src="https://cdn.jsdelivr.net/vue/2.0.5/vue.min.js"></script>
+      <script src="{{ "/assets/js/vue.min.js" | relative_url }}"></script>
       <script src="{{ "/assets/js/botui.js" | relative_url }}"></script>
       <script src="/assets/bots/{{ page.bot }}"></script>
 
