--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-
+<script src="{{ "/assets/js/vue.min.js" | relative_url }}"></script>
+      <script src="{{ "/assets/js/botui.js" | relative_url }}"></script>
 <div class="home">
 
   <h1 class="page-heading">Posts</h1>
