--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,7 @@
 <link rel="icon" type="image/png" sizes="96x96" href="{{"/assets/img/favicon-96x96.png" | relative_url}}">
 <link rel="icon" type="image/png" sizes="16x16" href="{{"/assets/img/favicon-16x16.png" | relative_url}}">
 <meta name="msapplication-TileColor" content="#ffffff">
+<link rel="manifest" href="{{"/manifest.json" | relative_url}}">
 <meta name="msapplication-TileImage" content="{{"/assets/img/ms-icon-144x144.png" | relative_url}}">
 <meta name="theme-color" content="#ffffff">
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
