--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,12 +28,13 @@
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
-  
+   
   {% if page.bot %}
 
   <link rel="stylesheet" href="{{ "/assets/css/botui.min.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/botui-theme-default.css" | relative_url }}">
-  
+  <script src="{{ "/assets/js/jquery.min.js" | relative_url }}"></script>
+      <script src="{{ "/assets/js/jquery.cookie.js" | relative_url }}"></script>
   {% endif %}
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
