--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,7 +36,10 @@
   <script src="{{ "/assets/js/jquery.min.js" | relative_url }}"></script>
       <script src="{{ "/assets/js/jquery.cookie.js" | relative_url }}"></script>
   {% endif %}
-  
+  <script src = "{{ "/assets/js/scaledrone.min.js" | relative_url }}"></script>
+  <link rel="stylesheet" href="{{ "/assets/css/chat.css" | relative_url }}">
+  <!--script src="http://twitterjs.googlecode.com/svn/trunk/src/twitter.min.js"></script-->
+
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   
